cmake_minimum_required(VERSION 3.13)
project(tree)

set(CMAKE_CXX_STANDARD 17)

add_executable(tree main.cpp min_heap.cpp min_heap.h max_heap.cpp max_heap.h b_tree.cpp b_tree.h top_k_frequent_word.cpp top_k_frequent_word.h find_elements_equelse_to_sum.cpp find_elements_equelse_to_sum.h add_two_numbers.cpp add_two_numbers.h length_of_longest_substring.cpp length_of_longest_substring.h find_median_sorted_arrays.cpp find_median_sorted_arrays.h longest_palindrome.cpp longest_palindrome.h)